--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "vitest run --coverage"
   },
   "dependencies": {
-    "vue": "^3.4.15"
+    "vue": "^3.4.15",
+    "yahoo-finance2": "^3.13.0"
   },
   "devDependencies": {
     "@types/node": "^25.2.2",
