--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest run --coverage"
+    "test": "vitest run --coverage",
+    "sync": "node scripts/sync-all-stocks.js"
   },
   "dependencies": {
     "vue": "^3.4.15",
