--- a/.github/workflows/sync-prices.yml
+++ b/.github/workflows/sync-prices.yml
@@ -10,9 +10,29 @@ permissions:
   pull-requests: read
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    name: Run Tests
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm run test
+
   sync-prices:
     runs-on: ubuntu-latest
     name: Update Stock Price Differences
+    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -51,26 +71,3 @@ jobs:
           echo "⚠️ Unexpected uncommitted changes detected!"
           git status
           exit 1
-
-  # Optional: Run tests to ensure nothing is broken
-  test:
-    runs-on: ubuntu-latest
-    name: Run Tests
-    needs: sync-prices
-    if: always()
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm run test
-        continue-on-error: true
